[tool.poetry]
name = "linkedin clone backend"
version = "0.1.0"
description = "LinkedIn Clone"
authors = ["Solomon Olatunji <realsolomon01@outlook.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
bson = "^0.5.10"
pydantic = "^2.5.2"
redis = "^5.0.1"
sse-starlette = "^1.8.2"
uvicorn = "^0.24.0.post1"
motor = "^3.3.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
black = "^23.12.0"

[tool.black]
line-length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
